--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FirstAidApp"
+        android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
 
         <!-- Main Activity -->
